Fixed spacing and text wrap for small screens

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -235,11 +235,6 @@ figcaption p {
   height: 100%;
 }
 
-table {
-  table-layout: auto;
-  width: 100%;
-}
-
 .table-narrow {
   width: 25%;
 }
@@ -249,7 +244,11 @@ table {
 }
 
 td {
-  padding: 5px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  padding-left: 5px;
+  padding-right: 5px;
+  vertical-align: top;
 }
 
 .text-center {
